fixed pop up out of place

--- a/style.css
+++ b/style.css
@@ -302,11 +302,10 @@ section {
   flex-direction: column;
   align-items: center;
   gap: 32px;
-  width: 200px;
 }
 
 .projectImage {
-  width: 300px;
+  width: 250px;
   object-fit: contain;
 }
 
@@ -351,11 +350,13 @@ section {
   flex-wrap: wrap;
   gap: 100px;
   justify-content: center;
+  position: relative;
 }
 .contact-links {
   display: flex;
   flex-direction: column;
   gap: 36px;
+  position: relative;
 }
 
 .contact-links button {
@@ -365,6 +366,7 @@ section {
   align-items: center;
   gap: 32px;
   box-shadow: none;
+  position: relative;
 }
 .contact-links button img {
   padding: 0px;
@@ -411,7 +413,7 @@ input,
   border-radius: 6px;
   padding: 6px;
   position: absolute;
-  bottom: 65%;
+  bottom: 30%;
   left: 40%;
 }
 
@@ -455,7 +457,10 @@ footer {
   text-align: center;
 }
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 700px) {
+  .project-card {
+    width: 600px;
+  }
   .projectImage {
     grid-area: image;
     width: 400px;
@@ -464,6 +469,43 @@ footer {
   input,
   #description {
     width: 300px;
+  }
+
+  nav {
+    position: fixed;
+    background-color: rgba(42, 41, 42, 0.9);
+    width: 100%;
+    height: auto;
+    padding-top: 0px;
+    z-index: 2;
+  }
+
+  nav div {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    margin-top: 5px;
+  }
+
+  #burgerClose,
+  #burgerButton {
+    display: none;
+  }
+
+  nav button {
+    background-color: transparent;
+    text-align: center;
+    font-size: 1.5rem;
+  }
+
+  nav button:hover {
+    background-color: rgba(44, 41, 42, 0.95);
+    width: auto;
+    cursor: pointer;
+    border-radius: 0px;
+    box-shadow: none;
   }
 }
 
